--- a/SA/SA.csproj
+++ b/SA/SA.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="view\" />
+  </ItemGroup>
 </Project>
