--- a/SA/SA.csproj
+++ b/SA/SA.csproj
@@ -12,6 +12,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="view\**" />
+    <EmbeddedResource Remove="view\**" />
+    <None Remove="view\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="LiveXAML" Version="2.1.73" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
@@ -20,7 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="view\" />
+
+	<Folder Include="Views\" />
 
     <EmbeddedResource Update="Views\MailView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
