Mail can now be sent with an HTML-template.

--- a/SA/SA.csproj
+++ b/SA/SA.csproj
@@ -27,6 +27,7 @@
     <None Remove="Images\groenlinks.png" />
     <None Remove="Images\Icon_map-political.png" />
     <None Remove="Images\pvda.png" />
+    <None Remove="Views\E-mail templates\mailAdvice.html" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,6 +36,9 @@
     <EmbeddedResource Include="Images\groenlinks.png" />
     <EmbeddedResource Include="Images\Icon_map-political.png" />
     <EmbeddedResource Include="Images\pvda.png" />
+    <EmbeddedResource Include="Views\E-mail templates\mailAdvice.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
@@ -46,8 +50,6 @@
   </ItemGroup>
 
   <ItemGroup>
-
-	<Folder Include="Views\" />
 
     <EmbeddedResource Update="Views\MailView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
