Revert "Commit new picture's and sources"
This reverts commit 5006e51511a26e4482524ee62dfd179a21921a15.

--- a/SA/SA.csproj
+++ b/SA/SA.csproj
@@ -24,17 +24,17 @@
   <ItemGroup>
     <None Remove="Images\cda.png" />
     <None Remove="Images\fvd.png" />
-    <None Remove="Images\gl.png" />
+    <None Remove="Images\groenlinks.png" />
     <None Remove="Images\Icon_map-political.png" />
     <None Remove="Images\pvda.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Images\CDA.png" />
-    <EmbeddedResource Include="Images\FvD.png" />
-    <EmbeddedResource Include="Images\GL.png" />
+    <EmbeddedResource Include="Images\cda.png" />
+    <EmbeddedResource Include="Images\fvd.png" />
+    <EmbeddedResource Include="Images\groenlinks.png" />
     <EmbeddedResource Include="Images\Icon_map-political.png" />
-    <EmbeddedResource Include="Images\PvdA.png" />
+    <EmbeddedResource Include="Images\pvda.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +46,8 @@
   </ItemGroup>
 
   <ItemGroup>
+
+	<Folder Include="Views\" />
 
     <EmbeddedResource Update="Views\MailView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
